--- a/README
+++ b/README
@@ -15,7 +15,7 @@
  * @category   class
  * @package    sitemap
  * @author     Mhd Zaher Ghaibeh <zaher@mhdzaherghaibeh.name>
- * @copyright  1997-2008 The PHP Group
+ * @copyright  2009 Mhd Zaher Ghaibeh
  * @license    http://www.gnu.org/licenses/gpl.html  GPL V 2.0
  * @version    CVS: $Id: sitemap.php,v 0.8 2009/01/24 cellog Exp $
  */
